--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>ignite</module>
+        <module>flowable</module>
     </modules>
     <packaging>pom</packaging>
 
