--- a/spring-framework/spring-webmvc/controller-advice/src/test/resources/log4j.properties
+++ b/spring-framework/spring-webmvc/controller-advice/src/test/resources/log4j.properties
@@ -8,4 +8,4 @@ log4j.appender.CA.layout.ConversionPattern= %d{hh:mm:ss,SSS} [%t] %-5p %c %x - %
 
 log4j.logger.org.springframework=INFO
 log4j.logger.org.springframework.test.web.servlet.result=DEBUG
-log4j.logger.com.ruirui.spring.web.advice.=DEBUG
+log4j.logger.com.ruirui.spring.webmvc.advice.=DEBUG
