--- a/spring-framework/spring-webmvc/exception-handler/pom.xml
+++ b/spring-framework/spring-webmvc/exception-handler/pom.xml
@@ -1,19 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-framework</artifactId>
+        <artifactId>spring-webmvc</artifactId>
         <groupId>com.ruirui</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-webmvc</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>exception-handler</artifactId>
+    <packaging>jar</packaging>
 
-    <name>spring-webmvc</name>
+    <name>exception-handler</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>controller-advice</module>
-        <module>exception-handler</module>
-    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty.aggregate</groupId>
+            <artifactId>jetty-all</artifactId>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
 </project>
