--- a/spring-framework/spring-beans/beandefinition-registry/pom.xml
+++ b/spring-framework/spring-beans/beandefinition-registry/pom.xml
@@ -1,19 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-framework</artifactId>
+        <artifactId>spring-beans</artifactId>
         <groupId>com.ruirui</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-beans</artifactId>
-    <packaging>pom</packaging>
+    <groupId>com.ruirui</groupId>
+    <artifactId>beandefinition-registry</artifactId>
+    <packaging>jar</packaging>
 
-    <name>spring-beans</name>
+    <name>beandefinition-registry</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>beandefinition-override</module>
-        <module>beandefinition-registry</module>
-    </modules>
 </project>
