--- a/spring-framework/spring-webmvc/exception-translator/pom.xml
+++ b/spring-framework/spring-webmvc/exception-translator/pom.xml
@@ -1,20 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-framework</artifactId>
+        <artifactId>spring-webmvc</artifactId>
         <groupId>com.ruirui</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-webmvc</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>exception-translator</artifactId>
+    <packaging>war</packaging>
 
-    <name>spring-webmvc</name>
-    <url>http://maven.apache.org</url>
-    <modules>
-        <module>controller-advice</module>
-        <module>exception-handler</module>
-        <module>exception-translator</module>
-    </modules>
+    <name>exception-translator Maven Webapp</name>
 </project>
