--- a/flowable/pom.xml
+++ b/flowable/pom.xml
@@ -14,6 +14,7 @@
     <url>http://maven.apache.org</url>
     <modules>
         <module>initiator</module>
+        <module>idm-integration</module>
     </modules>
 
     <properties>
