--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
                 <version>${jetty.version}</version>
                 <type>pom</type>
             </dependency>
+
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.196</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
