--- a/spring-framework/spring-aop/auto-proxy/pom.xml
+++ b/spring-framework/spring-aop/auto-proxy/pom.xml
@@ -3,18 +3,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-framework</artifactId>
+        <artifactId>spring-aop</artifactId>
         <groupId>com.ruirui</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-aop</artifactId>
-    <packaging>pom</packaging>
+    <groupId>com.ruirui.spring.aop</groupId>
+    <artifactId>auto-proxy</artifactId>
 
-    <name>spring-aop</name>
-    <modules>
-        <module>simple-proxy-create</module>
-        <module>auto-proxy</module>
-    </modules>
+    <name>auto-proxy</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+    </dependencies>
 </project>
