--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>flowable</module>
         <module>spring-framework</module>
         <module>mybatis3</module>
+        <module>hibernate5</module>
     </modules>
     <packaging>pom</packaging>
 
