Change module name

--- a/hibernate5/pom.xml
+++ b/hibernate5/pom.xml
@@ -15,7 +15,7 @@
 
     <name>hibernate5</name>
     <modules>
-        <module>generic-dao</module>
+        <module>hibernate-begin</module>
     </modules>
 
     <properties>
