--- a/flowable/idm-integration/pom.xml
+++ b/flowable/idm-integration/pom.xml
@@ -13,6 +13,13 @@
 
     <name>idm-integration</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <testResources>
             <testResource>
