--- a/spring-framework/spring-beans/beandefinition-override/pom.xml
+++ b/spring-framework/spring-beans/beandefinition-override/pom.xml
@@ -12,4 +12,21 @@
 
     <name>beandefiniton-override</name>
     <url>http://maven.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
