--- a/spring-framework/spring-beans/xml-namespace/pom.xml
+++ b/spring-framework/spring-beans/xml-namespace/pom.xml
@@ -12,4 +12,21 @@
     <artifactId>xml-namespace</artifactId>
 
     <name>xml-namespace</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
