--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-jdbc</module>
         <module>spring-webmvc</module>
         <module>spring-aop</module>
+        <module>spring-security</module>
     </modules>
 
     <properties>
@@ -52,13 +53,6 @@
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet-api.version}</version>
                 <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.assertj</groupId>
-                <artifactId>assertj-core</artifactId>
-                <version>${assertj.version}</version>
-                <scope>test</scope>
             </dependency>
 
             <dependency>
@@ -103,6 +97,13 @@
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
                 <version>${hsqldb.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
