Add hibernate5 generic dao module

--- a/hibernate5/generic-dao/pom.xml
+++ b/hibernate5/generic-dao/pom.xml
@@ -10,9 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ruirui.hibernate5</groupId>
-    <artifactId>basic-config</artifactId>
+    <artifactId>generic-dao</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-    <name>basic-config</name>
+    <name>generic-dao</name>
 
     <dependencies>
         <dependency>
@@ -23,6 +24,21 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
         </dependency>
 
         <dependency>
